# MongliPool

./: .gitignore  Cargo.toml  FUTURE_IMPROVEMENTS.md  PROGRESS.md  README.md  SECURITY_AUDIT.md  VIDEO_SCRIPT.md
circuits/: input.json  input_testnet.json  package-lock.json  package.json  proof.json  proof_testnet.json  public.json  public_testnet.json  verification_key.json  withdraw.circom  witness.wtns
circuits/scripts/: generate_input.js  proof_to_rust.js  setup.js  setup_and_prove.js  validate_frontend_serialize.js
contracts/asp-registry/: Cargo.toml
contracts/asp-registry/src/: lib.rs
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs
contracts/privacy-pool/: Cargo.toml
contracts/privacy-pool/src/: lib.rs
contracts/privacy-pool/test_snapshots/test/: test_asp_root_not_in_registry_rejected.1.json  test_double_initialize_fails.1.json  test_double_spend_rejected.1.json  test_initialize.1.json  test_withdraw_real_proof_transfers_tokens.1.json
docs/: PROOF_FORMAT.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/public/: progress.json
frontend/public/keys/: withdraw.wasm
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnimatedBg.tsx  DemoTour.tsx  Footer.tsx  MvpBanner.tsx  Navbar.tsx  Onboarding.tsx  PrivacyVisualizer3D.tsx  Reveal.tsx  ScrollToTop.tsx  Toast.tsx  WalletButton.tsx  WalletGate.tsx
scripts/: admin_update_roots.js  generate_dao_keypair.js  test_deposit_xdr.mjs  vk_to_hex.js
(+28 files in other folders)
