[package]
name = "privacy-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
groth16-verifier = { path = "../groth16-verifier", features = ["testutils"] }
asp-registry = { path = "../asp-registry", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]